@@ -1,4 +1,9 @@
-﻿svs 05.12.2013 14:43:33 +0400 - build 3730
+﻿svs 05.12.2013 17:07:29 +0400 - build 3731
+
+1. Mantis#0002537: лист с флагом DIF_LISTNOBOX в диалоге странно прокручивается мышью
+   ...аналогичное поведение было и у PgDn
+
+svs 05.12.2013 14:43:33 +0400 - build 3730
 
 1. SysLog. Выходной файл в UTF-8; корректировка открытия/закрытия файла (с отладочной инфой по завершению работы программы)
 
